# Personal-Portfolio

./: README.md
Bullet Hell Game/: Enemy.py  Player.py  Projectile.py  README.txt  main.py
College Projects/Bullet Hell Game/: README.txt  SETTINGS.py
College Projects/Minecraft Shaders/: README
College Projects/N-TEA/: Non-Trivial Educational Architecture (N-TEA) Documentation.docx  README.txt  index.html  script.js  style.css  ~$n-Trivial Educational Architecture (N-TEA) Documentation.docx
College Projects/Tile Engine/: README.txt
College Projects/Tile Engine/src/: BoundingBox.cpp  Display.cpp  Math.cpp  Texture.cpp  Texture.hpp  main.cpp  textures.txt
High School Projects/Notes/: Note-to-Docx.py  README.md
High School Projects/Notes/Test Notes/: Nested-Folder-Test.note
High School Projects/Rendering/Rasterizing/: Camera.py  Draw.py  README.txt  Ray.py  Triangle.py
High School Projects/Rendering/Raycasting/: README.txt  Raycaster.py  Raycasting_Engine.py
High School Projects/Rendering/Raytracing/: Raytracing.py  (+2 more)
Minecraft Shaders/: README
N-TEA/: README.txt  index.html  script.js
Notes/: Digital Cornell Notes.py  Test.note
Rendering/Rasterizing/: Box.py  Rasterizer.py  Vector3.py  main.py
Rendering/Raycasting/: Settings.py
Rendering/Raytracing/: MRaytracer.py  Original.py  Raytracer.py  tests.ppm
Statistics Calculator/: README.txt  README.txt.txt
Tile Engine/: CMakeLists.txt  README.txt
Tile Engine/src/: BoundingBox.hpp  Camera.cpp  Camera.hpp  Display.hpp  Math.hpp  World.cpp  World.hpp  testworld.txt
WinPi64/: README.txt
(+24 files in other folders)
